--- a/templates/electionmap.html
+++ b/templates/electionmap.html
@@ -13,7 +13,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 
   </head>
   <body>
@@ -27,9 +27,9 @@
     integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
     crossorigin=""></script>
     <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
     <!-- JS  -->
-    <script type="text/javascript" src="static/js/map.js"></script>
+    <script type="text/javascript" src="../static/js/map.js"></script>
 
   </body>
 </html>
