--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,6 +10,27 @@
 </head>
 
 <body>
+<!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light" style = "background-color: grey;">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <a class="navbar-brand" href="/">Welcome Page</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/election-map/">Election Map</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">State Dashboard</a>
+        </li>
+        
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <div class="container">
     <div class="row">
