--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="../static/css/clean-blog.min.css" rel="stylesheet">
 
 
 </head>
@@ -48,7 +48,7 @@
     </div>
   </nav>
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/rep-dem.jpg')">
+  <header class="masthead" style="background-image: url('../static/img/rep-dem.webp')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -80,13 +80,13 @@
                     <div class="row">
                         <div class="col-md-12">
                           <div class="thumbnail">
-                            <img src="img\map1.png" alt="..." class="img-thumbnail">
+                            <a href="/election-map/"><img src="../static/img/map1.png" alt="..." class="img-thumbnail" href="/election-map/"></a>
                           </div>
                         </div>
                     </div>
                     <div class="row">
                     <div class="col-md-12">
-                       <p>Click here to see map...</p>
+                       <p>Click image to see the election map distribution per state. This map also shows the winning candidate, percentage of total votes for said candidate, and the number of votes won by each party.</p>
                     </div>
                     </div>
                 </div>   
@@ -97,13 +97,13 @@
                   <div class="row">
                       <div class="col-md-12">
                         <div class="thumbnail">
-                          <img src="img\dash1.png" alt="..." class="img-thumbnail">
+                          <a href="/dashboard/"><img src="../static/img/dash1.png" alt="..." class="img-thumbnail"></a>
                         </div>
                       </div>
                   </div>
                   <div class="row">
                   <div class="col-md-12">
-                     <p>Click here to see info per state...</p>
+                     <p>Click image to see a state dashboard showing graphs comparing three factors: Voting pattern, gender, race and poverty rate.</p>
                   </div>
                   </div>
               </div>   
