--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <nav class="navbar navbar-expand-lg navbar-light" style = "background-color: grey;">
+      <link rel="stylesheet2" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <a class="navbar-brand" href="/" style="color:black">Welcome Page</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/election-map/" style="color:black">Election Map</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color:black">State Dashboard</a>
+          </li>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Project 2</title>
+  <title>Elections Dashboard</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
+
 <body>
-<!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light" style = "background-color: grey;">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <a class="navbar-brand" href="/">Welcome Page</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/election-map/">Election Map</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">State Dashboard</a>
-        </li>
-        
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
+
 
   <div class="container">
     <div class="row">
@@ -52,19 +54,26 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
+      <div>
+        <div class="col-md-5">
+          <div id="winnervotes">
+          </div>
+        </div>
+        <div class="col-md-5">
+          <div id="gauge"></div>
+        </div>
+        <div class="col-md-5">
+          <div id="barchart">
+          </div>
+        </div>
+        <div class="col-md-5">
+          <div id="pie"></div>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
-    </div>
+
   </div>
+  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
