--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#" style="color:black">State Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/conclusion/" style="color:black">Conclusions</a>
+          </li>
             </div>
           </li>
         </ul>
