--- a/templates/main.html
+++ b/templates/main.html
@@ -41,6 +41,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/dashboard/">State Dashboard</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/conclusion/">Conclusions</a>
+        </li>
         
           </div>
         </li>
@@ -55,6 +58,8 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>USA Elections 2020</h1>
+            <span class="subheading">The objective of this project is to find correlation in the voting patterns during USA 2020 election in the factors: poverty rate, gender distribution and race distribution.</span>
+            <br><br>
             <span class="subheading">Team 2: Laura Torres, Jimi Jenneskens, Levi Rodríguez, Diego Cravioto </span>
           </div>
         </div>
@@ -108,6 +113,22 @@
                   </div>
               </div>   
           </div>
+          <div class="col-md-12">
+            <div class="jumbotron">
+                <h1 class="display-4" style="color: black"><b>Conclusions</b></h1>
+                <div class="row">
+                    <div class="col-md-12">
+                      <div class="thumbnail">
+                        <a href="/conclusion/"><img src="../static/img/conclusion.png" alt="..." class="img-thumbnail" href="/election-map/"></a>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                <div class="col-md-6">
+                   <p>Click image to see the conclusions of our project.</p>
+                </div>
+                </div>
+            </div>
         </div>
 </div>  
 
